sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:6: error: not found: value flase
  while (isOver == flase){
                   ^