sort.basic.cocktail.AlgCocktailSort2.scala.code
var beg : Int = 0
var isOver : Boolean = false
def cocktailSort2() {
  var end : Int = getValueCount()
  while (isOver == flase){
    isOver = true
    for (i <- beg to end){
      if (isSmaller(i,i+1)== false){
        swap(i,i+1)
        end = end - 1
        isOver = false
      }
    }
    for ( i <- beg to end by -1){
      if (isSmaller(i,i+1)== false){
        swap(i,i+1)
        end = end - 1
        isOver = false
    }
  }
}
}